<resources>
    <string name="app_name">Odoo Contacts</string>
    <string name="invalid_username_or_password">Invalid username or password !</string>
    <string name="error_host_name_required">Host name required</string>
    <string name="error_username_required">Username required</string>
    <string name="error_password_required">Password required</string>

    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_home">Odoo Contacts</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="unable_to_connect_odoo">Unable to connect with odoo server</string>

    <string name="searh_title">Search</string>
    <string name="search_title">searchbar</string>
    <string name="save">Save</string>
    <string name="new_contact_create">Contact Created</string>
    <string name="call">Call</string>
    <string name="add_contact_to_device">Add to Device Contact</string>
    <string name="delete_contact">Delete</string>
    <string name="send_message">Send message</string>
    <string name="send_mail">Send mail</string>
    <string name="contact_created">Contact created</string>
    <string name="label_view">View</string>
    <string name="menu_sync_label">Sync Contacts</string>
    <string name="remove_fav_contact">Remove favourite contacts</string>
    <string name="remove_recent_contact">Remove recent contacts</string>
    <string name="hint_search_contact">Search contact</string>
    <string name="select_database">Select database</string>
    <string name="please_wait">Please wait...</string>
    <string name="login_in_progress">Login in progress</string>
    <string name="import_contact_from_device">Import contacts from device</string>
</resources>