<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.odoo.HomeActivity">
    <item
        android:id="@+id/menu_sync"
        android:icon="@drawable/ic_sync"
        android:title="@string/menu_sync_label"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_remove_fav_contact"
        android:title="@string/remove_fav_contact"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_remove_recent_contact"
        android:title="@string/remove_recent_contact"
        app:showAsAction="never" />
</menu>
